--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# .github/workflows/rustdesk.yml
 name: 🖥️ RustDesk Desktop (Web-Accessible)
 
 on:
@@ -16,55 +15,55 @@ on:
 jobs:
   desktop:
     runs-on: windows-latest
-    timeout-minutes: 360  # Máximo permitido
+    timeout-minutes: 360
 
     steps:
       - name: 🔽 Descargar RustDesk
         run: |
           curl -L https://github.com/rustdesk/rustdesk/releases/download/1.2.4/rustdesk-1.2.4-x86_64.exe -o rustdesk.exe
 
-      - name: 🚀 Instalar y ejecutar
+      - name: 🚀 Instalar RustDesk
         shell: pwsh
         run: |
           Start-Process -FilePath ".\rustdesk.exe" -ArgumentList "--silent-install" -Wait
-          Start-Sleep 10
+          Start-Sleep -Seconds 10
 
-      - name: 📡 Configurar credenciales
-        id: creds
+      - name: 📡 Configurar credenciales y exportar ID/Password
+        id: set_creds
         shell: pwsh
         run: |
-          $id = "${{ github.event.inputs.rustdesk_id }}"
-          $pw = "${{ github.event.inputs.rustdesk_password }}"
+          $customId = "${{ github.event.inputs.rustdesk_id }}"
+          $customPassword = "${{ github.event.inputs.rustdesk_password }}"
 
-          if (!$id) { $id = "GH$(Get-Date -Format 'HHmmss')" }
-          if (!$pw) { $pw = "Pass$(Get-Random -Minimum 10000 -Maximum 99999)!" }
+          if (-not $customId) {
+            $customId = "GH$(Get-Date -Format 'HHmmss')"
+          }
+          if (-not $customPassword) {
+            $customPassword = "Pass$(Get-Random -Minimum 10000 -Maximum 99999)!"
+          }
 
-          $config = @"
-            id = "$id"
-            password = "$pw"
-            encrypted = false
-          "@
+          $configDir = "$env:APPDATA\RustDesk\config"
+          $null = New-Item -ItemType Directory -Path $configDir -Force
 
-          $dir = "$env:APPDATA\RustDesk\config"
-          New-Item -ItemType Directory -Path $dir -Force
-          Set-Content -Path "$dir\RustDesk.toml" -Value $config
+          # ✅ Escribir el archivo TOML sin usar here-strings (@""), para evitar problemas en YAML
+          Set-Content -Path "$configDir\RustDesk.toml" -Value "encrypted = false`nid = `"$customId`"`npassword = `"$customPassword`""
 
           # Reiniciar RustDesk
-          Get-Process rustdesk -ErrorAction SilentlyContinue | Stop-Process
-          Start-Sleep 5
-          Start-Process "C:\Program Files\RustDesk\rustdesk.exe"
+          Get-Process -Name "rustdesk" -ErrorAction SilentlyContinue | Stop-Process
+          Start-Sleep -Seconds 5
+          Start-Process -FilePath "C:\Program Files\RustDesk\rustdesk.exe"
 
-          # 👇 ESTO ES CLAVE: exportar valores para usarlos después
-          echo "rustdesk_id=$id" >> $env:GITHUB_OUTPUT
-          echo "rustdesk_password=$pw" >> $env:GITHUB_OUTPUT
+          # Exportar salidas correctamente en PowerShell
+          "rustdesk_id=$customId" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
+          "rustdesk_password=$customPassword" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
 
       - name: 📢 ¡TUS CREDENCIALES!
         run: |
           echo "=================================================="
           echo "✅ ¡ESCRITORIO REMOTO ACTIVO!"
           echo "--------------------------------------------------"
-          echo "🆔 RustDesk ID:     ${{ steps.creds.outputs.rustdesk_id }}"
-          echo "🔑 Contraseña:      ${{ steps.creds.outputs.rustdesk_password }}"
+          echo "🆔 RustDesk ID:     ${{ steps.set_creds.outputs.rustdesk_id }}"
+          echo "🔑 Contraseña:      ${{ steps.set_creds.outputs.rustdesk_password }}"
           echo "--------------------------------------------------"
           echo "👉 Conéctate desde: https://rustdesk.com"
           echo "⏱️  Vigente ~6 horas (límite de GitHub Actions)"
@@ -73,10 +72,10 @@ jobs:
       - name: 🔄 Mantener vivo
         shell: pwsh
         run: |
-          $end = (Get-Date).AddMinutes(350)
-          while ((Get-Date) -lt $end) {
-            if (!(Get-Process rustdesk -ErrorAction SilentlyContinue)) {
-              Start-Process "C:\Program Files\RustDesk\rustdesk.exe"
+          $endTime = (Get-Date).AddMinutes(350)
+          while ((Get-Date) -lt $endTime) {
+            if (-not (Get-Process -Name "rustdesk" -ErrorAction SilentlyContinue)) {
+              Start-Process -FilePath "C:\Program Files\RustDesk\rustdesk.exe"
             }
-            Start-Sleep 300
+            Start-Sleep -Seconds 300
           }
